[package]
name = "screaming_float"
version = "0.1.0"
authors = ["William Brandon <hypercube97@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
noisy_float = "0.1.13"
rodio = "0.11.0"
num-traits = "0.2.12"
