[package]
name = "screaming_float"
version = "0.1.0"
authors = ["William Brandon <hypercube97@gmail.com>"]
edition = "2018"
description = "Implements screaming NaNs"
license = "MIT"
repository = "https://github.com/exists-forall/screaming_float"

[dependencies]
noisy_float = "0.1.13"
rodio = "0.11.0"
num-traits = "0.2.12"
